@@ -1,3 +1,6 @@
+(2001/06/25 - broeker) Fix SF bug #435535: two uses of yytext[] had been left 
+	               over in fscanner.l, causing incorrect compression of
+		       keywords #define and #include.
 (2001/06/19 - broeker) More bugfixes and changes to flex scanner. Handling
 	               of preprocessing directives treats whitespace and
 		       garbage after the keyword more gently. It also avoids
